feat: adds possibility to upload module stylesheet in a version fix: docker-compose startup dependencies feat: add get_module.go endpoint
