# rpc/server.go
@@ -10,14 +10,14 @@ import (
 
 type RegistryReader interface {
 	GetModule(ctx context.Context, name string) (*internal.Module, error)
-	UriForModule(ctx context.Context, module *internal.Module) (string, error)
+	UriForModule(ctx context.Context, module *internal.Module) (*internal.VersionResources, error)
 	Close() error
 }
 
 type RegistryWriter interface {
 	NewModule(ctx context.Context, name string, author string, language string) error
 	DeleteModule(ctx context.Context, module *internal.Module) error
-	UploadVersion(ctx context.Context, module *internal.Module, version *semver.Version, data []byte) error
+	UploadVersion(ctx context.Context, module *internal.Module, version *semver.Version, data []byte, styleData []byte) error
 	DeleteVersion(ctx context.Context, module *internal.Module, version *semver.Version) error
 }
 
